xfiles-app/kustomize/xfiles-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xfiles-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: xfiles-app  # ✅ Must match the service
  template:
    metadata:
      labels:
        app: xfiles-app  # ✅ Ensure this matches
    spec:
      containers:
          - name: xfiles-app
            image: ghcr.io/airkine/xfiles:0.0.13
            ports:
            - containerPort: 8080
            resources:
              limits:
                memory: "512Mi"
                cpu: "500m"
              requests:
                memory: "256Mi"
                cpu: "250m"
